# dataset_tools

./: .gitignore  README.md  batch_slice.sh  merge_data_logs.py  pyproject.toml  split_coco.py  split_data.py  tile_dataset.py  unzip.sh  verify-data_log-images.sh
archive/: generate_annotations.py  split_data.py  textfile_reorder.py  tile_dataset.py
label_studio/: Label-Studio-Annotation-Copy-Workflow.md  clean_coco_datasets.py  copy_annotations.py  dowload_project_annotations.sh  download_dataset_coco.py  merge_datasets.py
